--- a/src/package.json
+++ b/src/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node src/db/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/db/index.js"
+   
   },
   "keywords": [],
   "author": "",
